--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home">
 
   <div class="left-col">
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+    <p class="rss-subscribe"><a href="https://twitter.com/thehaysstanford?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @thehaysstanford</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
   </div class="left-col">
   <div class="right-col">
     <a class="twitter-timeline" href="https://twitter.com/thehaysstanford?ref_src=twsrc%5Etfw">Tweets by thehaysstanford</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
