--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@ layout: default
 
 <div class="home">
 
-  <div class="left-col">
-    <p class="rss-subscribe"><a href="https://twitter.com/thehaysstanford?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @thehaysstanford</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
-  </div class="left-col">
-  <div class="right-col">
-    <a class="twitter-timeline" href="https://twitter.com/thehaysstanford?ref_src=twsrc%5Etfw">Tweets by thehaysstanford</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </div class="right-col">
+  <div class="column">
+  	<div class="github-widget" data-username="hayss"></div>
+	<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div class="column">
+  <div class="column">
+    <a class="twitter-timeline" data-height="450" href="https://twitter.com/thehaysstanford?ref_src=twsrc%5Etfw">Tweets by thehaysstanford</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div class="column">
 
 </div>
